--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,9 @@ include:
     shield: sofle_left
   - board: nice_nano_v2
     shield: sofle_right
+  - board: nice_nano_v2
+    shield: reviung41
+  - board: nice_nano_v2
+    shield: lily58_right
+  - board: nice_nano_v2
+    shield: lily58_left
